fixed overflow off top, sidebar does not grow anymore

--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@
   height: 100vh;
   position: relative;
   overflow-x: hidden;
-  border: 10px solid blue;
+  /* border: 10px solid blue; */
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
@@ -127,7 +127,7 @@ button {
   animation: name-change2 linear forwards 1s;
 }
 .App > div:nth-child(2) {
-  flex: 14 0 auto;
+  flex: 14 1 auto;
   height: 400vh;
   background-color: var(--bg);
   -ms-overflow-style: none; /* IE and Edge */
@@ -307,7 +307,7 @@ a:visited {
   justify-content: center;
   align-items: center;
   overflow: visible;
-  border: 23px solid black;
+  /* border: 23px solid black; */
 }
 .right > div > div {
   width: 100%;
@@ -327,6 +327,7 @@ a:visited {
   text-align: left;
   margin-left: 1rem;
   margin-top: 1rem;
+  margin-bottom: 0;
 }
 
 h2 {
@@ -338,7 +339,7 @@ h3 {
 
 #container {
   height: 400vh;
-  border: 4px solid maroon;
+  /* border: 4px solid maroon; */
   display: flex;
   flex-direction: column;
   justify-content: safe center;
@@ -349,9 +350,27 @@ h3 {
   /* margin: auto; */
   /* flex: 1; */
   height: 100vh;
+  max-width: 100%;
 }
 /* 
 #container > div:first-child {
   top: 0;
   margin-bottom: 2rem;
 } */
+
+.first {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.second {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+}
+
+.second > p {
+  width: 50%;
+}
